Index page introduced, DnD moved to subfolder.

--- a/dnd.html
+++ b/dnd.html
@@ -136,12 +136,12 @@
     </div>
 
     <!-- Data -->
-    <script type="text/javascript" src="js/data_movement.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/data_action.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/data_bonusaction.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/data_reaction.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/data_condition.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/data_environment.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/quickref.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/dnd/data_movement.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/dnd/data_action.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/dnd/data_bonusaction.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/dnd/data_reaction.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/dnd/data_condition.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/dnd/data_environment.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/dnd/dnd.js" charset="utf-8"></script>
 </body>
 </html>
