Structure changed for better contribution of new systems. Readme and License added.

--- a/rpgs/dnd5/quickref.html
+++ b/rpgs/dnd5/quickref.html
@@ -5,13 +5,13 @@
     <meta name=viewport content="width=device-width, initial-scale=1">
     <title>D&D 5e quick reference</title>
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="css/quickref.css">
-    <link rel="stylesheet" type="text/css" href="css/icons.css">
+    <link rel="stylesheet" type="text/css" href="../../css/quickref.css">
+    <link rel="stylesheet" type="text/css" href="../../css/icons.css">
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
     <!-- Javascript -->
-    <script type="text/javascript" src="js/jquery/jquery.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="../../js/jquery/jquery.min.js" charset="utf-8"></script>
 </head>
 <body class="page-background">
     <div class="page fontsize" data-size="fullscreen">
@@ -136,12 +136,12 @@
     </div>
 
     <!-- Data -->
-    <script type="text/javascript" src="js/dnd5/data_movement.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/dnd5/data_action.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/dnd5/data_bonusaction.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/dnd5/data_reaction.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/dnd5/data_condition.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/dnd5/data_environment.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/dnd5/dnd5.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/data_movement.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/data_action.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/data_bonusaction.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/data_reaction.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/data_condition.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/data_environment.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/dnd5.js" charset="utf-8"></script>
 </body>
 </html>
