DnD updated according to new SRD

--- a/rpgs/dnd5/quickref.html
+++ b/rpgs/dnd5/quickref.html
@@ -51,8 +51,7 @@
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
-                    You can take a bonus action only when a special ability, spell, or feature
-                    states that you can do something as a bonus action.
+                    A special action you can take only when a special ability, spell, or feature says you can.
                 </div>
                 <div class="section-row" id="basic-bonus-actions"></div>
             </div>
@@ -65,8 +64,7 @@
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
-                    A reaction is an instant response to a trigger of some kind, which
-                    can occur on your turn or on someone else's.
+                    A quick response to a trigger. A reaction can occur at any time on your turn or someone else's turn.
                 </div>
                 <div class="section-row" id="basic-reactions"></div>
             </div>
@@ -102,7 +100,7 @@
                 <div class="section-row section-subtitle text fontsize">
                     Some creatures have extraordinary senses that allow them to perceive their environment.
                 </div>
-                <div class="section-row" id="environment-vision"></div>
+                <div class="section-row" id="environment-senses"></div>
                 <div class="section-row section-subtitle text fontsize">
                     Obstacles can provide cover during combat, making a target more difficult to harm.
                 </div>
