Added donation buttons

--- a/index.html
+++ b/index.html
@@ -23,10 +23,23 @@
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
-                    You can move at any time during your turn (before, after, or during actions).
+                    A collection of quick reference tools for popular tabletop RPG systems. Inspired by and based on <a href="https://crobi.github.io/dnd5e-quickref/preview/quickref.html">[Crobi's D&D 5e Quickref]</a>.
+
                 </div>
                 <div class="section-row" id="basic-index">
                 </div>
+            </div>
+        </div>
+        <!-- Support section -->
+        <div id="section-support" class="section-container">
+            <div class="section-title">
+                Support Me
+            </div>
+            <div class="section-content">
+                <div class="section-row section-subtitle text fontsize">
+                    If you find this project useful, you can support development:
+                </div>
+                <div class="section-row" id="basic-support"></div>
             </div>
         </div>
     </div>
@@ -56,6 +69,7 @@
 
     <!-- Data -->
     <script type="text/javascript" src="js/index/data_index.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/index/data_support.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/index/index.js" charset="utf-8"></script>
 </body>
 </html>
