--- a/rpgs/dnd5/quickref.html
+++ b/rpgs/dnd5/quickref.html
@@ -109,7 +109,9 @@
         </div>
 
     </div>
-
+    <a href="../../index.html" class="fab-container">
+        <div class="fab-icon icon-house"></div>
+    </a>
     <!-- Modal -->
     <div class="modal" id="modal" tabindex="-1">
         <div class="modal-backdrop" id="modal-backdrop"></div>
