--- a/rpgs/pf2/quickref.html
+++ b/rpgs/pf2/quickref.html
@@ -16,102 +16,65 @@
 <body class="page-background">
     <div class="page fontsize" data-size="fullscreen">
 
-        <!-- Movement section -->
-        <div id="section-movement" class="section-container">
-            <div class="section-title">
-                Movement <span class="float-right">limited by movement speed</span>
-            </div>
-            <div class="section-content">
-                <div class="section-row section-subtitle text fontsize">
-                    You can move at any time during your turn (before, after, or during actions).
-                </div>
-                <div class="section-row" id="basic-movement">
-                </div>
-            </div>
-        </div>
-
         <!-- Action section -->
         <div id="section-action" class="section-container">
             <div class="section-title">
-                Action <span class="float-right">1/turn</span>
+                Action
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
-                    You can also interact with one object or feature of the
-                    environment for free.
+                    Placeholder text describing actions.
                 </div>
                 <div class="section-row" id="basic-actions"></div>
             </div>
         </div>
-
-        <!-- Bonus action section -->
-        <div id="section-bonus-action" class="section-container">
-            <div class="section-title">
-                Bonus action <span class="float-right">max. 1/turn</span>
-            </div>
-            <div class="section-content">
-                <div class="section-row section-subtitle text fontsize">
-                    You can take a bonus action only when a special ability, spell, or feature
-                    states that you can do something as a bonus action.
-                </div>
-                <div class="section-row" id="basic-bonus-actions"></div>
-            </div>
-        </div>
-
-        <!-- Reaction section -->
-        <div id="section-reaction" class="section-container">
-            <div class="section-title">
-                Reaction <span class="float-right">max. 1/round</span>
-            </div>
-            <div class="section-content">
-                <div class="section-row section-subtitle text fontsize">
-                    A reaction is an instant response to a trigger of some kind, which
-                    can occur on your turn or on someone else's.
-                </div>
-                <div class="section-row" id="basic-reactions"></div>
-            </div>
-        </div>
-
-        <!-- Condition section -->
-        <div id="section-condition" class="section-container">
-            <div class="section-title">
-                Condition
-            </div>
-            <div class="section-content">
-                <div class="section-row section-subtitle text fontsize">
-                    Conditions alter your capabilities in a variety of ways, and can arise as a result of a spell, a class feature, a monster's attack, or other effect.
-                </div>
-                <div class="section-row" id="basic-conditions"></div>
-            </div>
-        </div>
         
-        <!-- Environmental section -->
-        <div id="section-environment" class="section-container">
+        <!-- Skill action section -->
+        <div id="section-skill-action" class="section-container">
             <div class="section-title">
-                Environmental Effects
+                Skill Actions
             </div>
             <div class="section-content">
-                <div class="section-row section-subtitle text fontsize">
-                    Effects that obscure vision can prove a significant hindrance to most adventuring tasks.
-                </div>
-                <div class="section-row" id="environment-obscurance"></div>
-                <div class="section-row section-subtitle text fontsize">
-                    The presence or absence of light in an environment creates three categories of illumination.
-                </div>
-                <div class="section-row" id="environment-light"></div>
-                <div class="section-row section-subtitle text fontsize">
-                    Some creatures have extraordinary senses that allow them to perceive their environment.
-                </div>
-                <div class="section-row" id="environment-vision"></div>
-                <div class="section-row section-subtitle text fontsize">
-                    Obstacles can provide cover during combat, making a target more difficult to harm.
-                </div>
-                <div class="section-row" id="environment-cover"></div>
+                <div class="section-row section-subtitle text fontsize">Acrobatics</div>
+                <div class="section-row" id="skill-acrobatics"></div>
+                <div class="section-row section-subtitle text fontsize">Arcana</div>
+                <div class="section-row" id="skill-arcana"></div>
+                <div class="section-row section-subtitle text fontsize">Athletics</div>
+                <div class="section-row" id="skill-athletics"></div>
+                <div class="section-row section-subtitle text fontsize">Crafting</div>
+                <div class="section-row" id="skill-crafting"></div>
+                <div class="section-row section-subtitle text fontsize">Deception</div>
+                <div class="section-row" id="skill-deception"></div>
+                <div class="section-row section-subtitle text fontsize">Diplomacy</div>
+                <div class="section-row" id="skill-diplomacy"></div>
+                <div class="section-row section-subtitle text fontsize">Intimidation</div>
+                <div class="section-row" id="skill-intimidation"></div>
+                <div class="section-row section-subtitle text fontsize">Lore</div>
+                <div class="section-row" id="skill-lore"></div>
+                <div class="section-row section-subtitle text fontsize">Medicine</div>
+                <div class="section-row" id="skill-medicine"></div>
+                <div class="section-row section-subtitle text fontsize">Nature</div>
+                <div class="section-row" id="skill-nature"></div>
+                <div class="section-row section-subtitle text fontsize">Occultism</div>
+                <div class="section-row" id="skill-occultism"></div>
+                <div class="section-row section-subtitle text fontsize">Performance</div>
+                <div class="section-row" id="skill-performance"></div>
+                <div class="section-row section-subtitle text fontsize">Religion</div>
+                <div class="section-row" id="skill-religion"></div>
+                <div class="section-row section-subtitle text fontsize">Society</div>
+                <div class="section-row" id="skill-society"></div>
+                <div class="section-row section-subtitle text fontsize">Stealth</div>
+                <div class="section-row" id="skill-stealth"></div>
+                <div class="section-row section-subtitle text fontsize">Thievery</div>
+                <div class="section-row" id="skill-thievery"></div>
+
             </div>
         </div>
 
     </div>
-
+    <a href="../../index.html" class="fab-container">
+        <div class="fab-icon icon-house"></div>
+    </a>
     <!-- Modal -->
     <div class="modal" id="modal" tabindex="-1">
         <div class="modal-backdrop" id="modal-backdrop"></div>
@@ -134,14 +97,9 @@
             </div>
         </div>
     </div>
-
     <!-- Data -->
-    <script type="text/javascript" src="js/data_movement.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/data_skill_action.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/data_action.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/data_bonusaction.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/data_reaction.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/data_condition.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/data_environment.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/dnd5.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/pf2e.js" charset="utf-8"></script>
 </body>
 </html>
